--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,4 @@
 	url = https://github.com/Godlike/Epona.git
 [submodule "third_party/imgui"]
 	path = third_party/imgui
-	url = https://github.com/ocornut/imgui.git
+	url = https://github.com/ilia-glushchenko/imgui.git
