--- a/Pegasus/PegasusPhysicsConfig.cmake.in
+++ b/Pegasus/PegasusPhysicsConfig.cmake.in
@@ -6,4 +6,5 @@ set(PREFIX ${CMAKE_CURRENT_LIST_DIR}/../..)
 
 set(Pegasus_INCLUDE_DIRS ${PREFIX}/@PEGASUS_INSTALL_INCLUDE_DIR@)
 set(Pegasus_LIBRARY_DIRS ${PREFIX}/@PEGASUS_INSTALL_LIBRARY_DIR@)
+set(Pegasus_DEFINITIONS @PEGASUS_DEFINITIONS@)
 set(Pegasus_LIB @PEGASUS_LIB@)
