[#102] Documentation update and typo fixes

--- a/Pegasus/CMakeLists.txt
+++ b/Pegasus/CMakeLists.txt
@@ -19,9 +19,9 @@ if (NOT GLM_FOUND)
 endif()
 
 if (NOT ARION_FOUND)
-    option(ARION_BUILD_DEMOS "Build Arion demo."  OFF)
-    option(ARION_BUILD_TESTS "Build Arion tests." OFF)
-    option(ARION_BUILD_DEBUG "Build Arion debug." ON)
+    set(ARION_BUILD_DEMOS OFF CACHE BOOL "Build Arion demo.")
+    set(ARION_BUILD_TESTS OFF CACHE BOOL "Build Arion tests.")
+    set(ARION_BUILD_DEBUG ON  CACHE BOOL "Build Arion debug.")
     add_subdirectory(${PEGASUS_ROOT}/Pegasus/godlike/Arion)
     add_definitions(${ARION_DEFINITIONS})
 endif()
