--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ option(PEGASUS_BUILD_DEMOS "Build Pegasus demo."  ON)
 option(PEGASUS_BUILD_TESTS "Build Pegasus tests." ON)
 option(PEGASUS_BUILD_DEBUG "Build Pegasus debug." ON)
 
-message(STATUS "${PROJECT_NAME} configuration:")
+message(STATUS "${PROJECT_NAME} ${CMAKE_BUILD_TYPE} configuration:")
 message(STATUS "-- PEGASUS_BUILD_DEMOS: ${PEGASUS_BUILD_DEMOS}")
 message(STATUS "-- PEGASUS_BUILD_TESTS: ${PEGASUS_BUILD_TESTS}")
 message(STATUS "-- PEGASUS_BUILD_DEBUG: ${PEGASUS_BUILD_DEBUG}")
