[#118] Resolve demo building issues
Separate custom imgui demo implementation in a static library
Separate build flags from PegasusConfig

--- a/Pegasus/CMakeLists.txt
+++ b/Pegasus/CMakeLists.txt
@@ -5,6 +5,7 @@
 cmake_minimum_required (VERSION 3.1)
 
 include(PegasusConfig)
+include(PegasusBuildFlags)
 
 project(${PEGASUS_NAME})
 set(CMAKE_CXX_STANDARD 14)
