[#128] Collision system refactoring

--- a/Pegasus/CMakeLists.txt
+++ b/Pegasus/CMakeLists.txt
@@ -41,12 +41,14 @@ set(PEGASUS_HEADERS
     include/pegasus/Body.hpp
     include/pegasus/Force.hpp
     include/pegasus/Integration.hpp
-    include/pegasus/Collision.hpp
     include/pegasus/Asset.hpp
     include/pegasus/AssetManager.hpp
     include/pegasus/Scene.hpp
     include/pegasus/Primitives.hpp
     include/pegasus/Material.hpp
+    include/pegasus/Contact.hpp
+    include/pegasus/CollisionResolver.hpp
+    include/pegasus/CollisionDetector.hpp
 )
 set(PEGASUS_SOURCES
     sources/DebugDummy.cpp
@@ -54,7 +56,6 @@ set(PEGASUS_SOURCES
     sources/Body.cpp
     sources/Force.cpp
     sources/Integration.cpp
-    sources/Collision.cpp
     sources/Asset.cpp
     sources/Scene.cpp
     sources/Primitives.cpp
