--- a/Pegasus/PegasusPhysicsConfig.cmake.in
+++ b/Pegasus/PegasusPhysicsConfig.cmake.in
@@ -1,10 +1,42 @@
-# Copyright (C) 2017 by Godlike
+# Copyright (C) 2017-2018 by Godlike
 # This code is licensed under the MIT license (MIT)
 # (http://opensource.org/licenses/MIT)
 
 set(PREFIX ${CMAKE_CURRENT_LIST_DIR}/../..)
+set(PEGASUS_LINK_LIBRARIES
+    Arion::Collision
+)
 
-set(Pegasus_INCLUDE_DIRS ${PREFIX}/@PEGASUS_INSTALL_INCLUDE_DIR@)
-set(Pegasus_LIBRARY_DIRS ${PREFIX}/@PEGASUS_INSTALL_LIBRARY_DIR@)
-set(Pegasus_DEFINITIONS @PEGASUS_DEFINITIONS@)
-set(Pegasus_LIB @PEGASUS_LIB@)
+include(CMakeFindDependencyMacro)
+
+find_dependency(ArionCollision REQUIRED)
+
+# Describe imported library
+add_library(@PROJECT_NAME@ SHARED IMPORTED)
+set_target_properties(@PROJECT_NAME@ PROPERTIES
+    IMPORTED_LOCATION "${PREFIX}/@PEGASUS_INSTALL_LIBRARY_DIR@/$<TARGET_FILE_NAME:@PROJECT_NAME@>"
+    INTERFACE_INCLUDE_DIRECTORIES "${PREFIX}/@PEGASUS_INSTALL_INCLUDE_DIR@"
+    INTERFACE_LINK_LIBRARIES "${PEGASUS_LINK_LIBRARIES}"
+    INTERFACE_COMPILE_DEFINITIONS "@PEGASUS_DEFINITIONS@"
+)
+
+# Create aliases to imported library
+add_library(@PROJECT_NAME@Proxy INTERFACE)
+add_library(@PROJECT_NAME@::@PROJECT_NAME@ ALIAS @PROJECT_NAME@Proxy)
+add_library(@PEGASUS_LIB_ALIAS@ ALIAS @PROJECT_NAME@Proxy)
+
+target_compile_definitions(@PROJECT_NAME@Proxy
+    INTERFACE
+        @PEGASUS_DEFINITIONS@
+)
+
+target_link_libraries(@PROJECT_NAME@Proxy
+    INTERFACE
+        @PROJECT_NAME@
+        ${PEGASUS_LINK_LIBRARIES}
+)
+
+target_include_directories(@PROJECT_NAME@Proxy
+    SYSTEM INTERFACE
+        ${PREFIX}/@PEGASUS_INSTALL_INCLUDE_DIR@
+)
